--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "yarn": "^1.22.19"
   },
   "scripts": {
+    "build": "CI=false react-scripts build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
